@@ -52,6 +52,9 @@ VAT_NUMBERS = [
     ('GB', '242338087388'),
     ('GR', '12345670'),
     ('GR', '123456783'),
+    ('HR', '12345678903'),
+    ('HR', '24595836665'),
+    ('HR', '23448731483'),
     ('HU', '12345676'),
     ('IE', '7A12345J'),
     ('IE', '1234567T'),
