@@ -1,3 +1,5 @@
+* Add Check Croatia VAT number
+
 Version 0.6 - 2010-05-30
 * Add generic check_vat method
 * Replace SOAPpy by suds
